# sparc_custom_tabs

./: .gitignore  FUNDING.yml  MANIFEST.in  build.py  main.py  pyproject.toml  requirements.txt  setup.py
sparc_custom_tabs/: __init__.py
sparc_custom_tabs/frontend/: craco.config.js  package-lock.json  package.json  tsconfig.json
sparc_custom_tabs/frontend/public/: bootstrap.min.css  index.html
sparc_custom_tabs/frontend/src/: TabBar.tsx  bootstrap.min.css  index.tsx
